# clashbot-nav

./: .gitignore  README.md  pyproject.toml
clashbot/: google_play.py  image_rec.py  recorder.py
tools/: annotator.py  audit.py  navigation_mapper.py  pixel_debugger.py  pixel_extractor.py
